--- a/src/Common.scss
+++ b/src/Common.scss
@@ -19,9 +19,6 @@
   align-items: center;
 }
 
-section {
-  padding: 0 10px 40px;
-}
 .input-width {
   width: 120px;
   margin: 2px;
